--- a/HTML practise/UFC/index.css
+++ b/HTML practise/UFC/index.css
@@ -1,5 +1,7 @@
 body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    /*background-image: url("https://dmxg5wxfqgb4u.cloudfront.net/styles/background_image_xl/s3/2020-07/generic%20apex%20octagon%20hero.jpg?VersionId=null&h=d1cb525d&itok=WEfdiQ76");
+    background-size: contain; */
     background-color: thistle;
 }
 
