--- a/HTML practise/UFC/index.css
+++ b/HTML practise/UFC/index.css
@@ -14,5 +14,12 @@ body>header>h1{
 
 li a{
     text-decoration: none;
-    color:black
+    color:black;
+    width: 200px;
+    margin-bottom: 1px;
+
+}
+
+a:link, a:visited{
+    
 }
